--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
+# mypy
+.mypy_cache/
+.vscode
+*.idea*
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+*.pyc
+*/__pycache__/
+
+
+# ckpt
 /vgg_model/*
 /pretrained_checkpoint/*
+
